[gd_scene load_steps=6 format=3 uid="uid://bygcaes1c2un3"]

[ext_resource type="Texture2D" uid="uid://cwp85y5as1uva" path="res://assets/images/player/PolyBG.png" id="1_gt6s7"]
[ext_resource type="Script" path="res://scripts/ui/translate_level.gd" id="1_q1giy"]
[ext_resource type="PackedScene" uid="uid://dw1q1ijlm57wc" path="res://scenes/objects/players/Polygon.tscn" id="2_74s56"]
[ext_resource type="PackedScene" uid="uid://cxvcmx3gcmuxd" path="res://scenes/objects/UI/UI.tscn" id="4_d41k5"]
[ext_resource type="PackedScene" uid="uid://b13arossmgg0l" path="res://scenes/ui/buttons.tscn" id="5_vm8cx"]

[node name="TranslateLevel" type="Node2D"]
script = ExtResource("1_q1giy")

[node name="Polygon" parent="." instance=ExtResource("2_74s56")]
position = Vector2(640, 360)

[node name="spawn_origin" type="Node2D" parent="."]

[node name="top_right" type="Node2D" parent="spawn_origin"]
position = Vector2(1481, -189)

[node name="right" type="Node2D" parent="spawn_origin"]
position = Vector2(1486, 360)

[node name="bottom_right" type="Node2D" parent="spawn_origin"]
position = Vector2(1492, 919)

[node name="down" type="Node2D" parent="spawn_origin"]
position = Vector2(640, 934)

[node name="bottom_left" type="Node2D" parent="spawn_origin"]
position = Vector2(-201, 905)

[node name="left" type="Node2D" parent="spawn_origin"]
position = Vector2(-181, 360)

[node name="top_left" type="Node2D" parent="spawn_origin"]
position = Vector2(-189, -190)

[node name="up" type="Node2D" parent="spawn_origin"]
position = Vector2(640, -228)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Control" parent="." instance=ExtResource("4_d41k5")]

[node name="background_layer" type="CanvasLayer" parent="Control"]
layer = -3

[node name="image" type="TextureRect" parent="Control/background_layer"]
modulate = Color(0.839216, 0.839216, 0.839216, 1)
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_gt6s7")

[node name="Buttons" parent="." instance=ExtResource("5_vm8cx")]
